# num_parser

./: .commitlintrc.cjs  .cz-config.cjs  .lintstagedrc  .prettierrc  Cargo.toml  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
.github/workflows/: app-build.yml  code-quality.yml  fm_mat.yml  svelte-code-quality.yml  tauri-code-quality.yml
src/: App.js  App.svelte  app.scss  index.css  index.js  lib.rs  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/fm_mat/: Cargo.toml  README.md
src-tauri/fm_mat/src/: lib.rs
src-tauri/fm_mat/src/api/: mod.rs
src-tauri/fm_mat/src/context/: mod.rs  settings.rs
src-tauri/fm_mat/src/function/: builtin.rs  mod.rs
src-tauri/fm_mat/src/objects/: mod.rs
src-tauri/fm_mat/src/operators/: mod.rs
src-tauri/fm_mat/src/tests/: mod.rs
src-tauri/fm_mat/src/token/: display.rs
src-tauri/fm_mat/src/tree/: mod.rs
src-tauri/fm_mat/src/value/: mod.rs
src-tauri/numcore/: Cargo.toml  LICENSE  README.md
src-tauri/numcore/src/: lib.rs
src-tauri/numcore/src/api/: mod.rs
src-tauri/numcore/src/context/: mod.rs  settings.rs
src-tauri/numcore/src/expr/: mod.rs
src-tauri/numcore/src/function/: builtin.rs  mod.rs
src-tauri/numcore/src/interpreter/: mod.rs
src-tauri/numcore/src/objects/: display.rs  mod.rs
src-tauri/numcore/src/operators/: mod.rs
src-tauri/numcore/src/token/: display.rs  mod.rs  tokentype.rs
src-tauri/numcore/src/tree/: mod.rs
src-tauri/numcore/src/value/: display.rs  mod.rs  valuetype.rs
src-tauri/src/: core.rs  main.rs  parser.rs
src-tauri/src/core/: context.rs  functions.rs  mod.rs  parser.rs
src-tauri/src/core/expr/: mod.rs
src-tauri/src/core/function/: mod.rs
src-tauri/src/core/functions/: operators.rs  trigonometry.rs
src-tauri/src/core/operators/: mod.rs
src-tauri/src/core/parser/: checks.rs  op_conversion.rs  operators.rs  utils.rs
src-tauri/src/core/token/: display.rs  mod.rs  tokentype.rs
src-tauri/src/core/tree/: mod.rs
src-tauri/src/core/value/: display.rs  mod.rs  valuetype.rs
src-tauri/src/parser/: exp.rs
src/api/: mod.rs
src/components/: layout.js  layout.jsx  toolswindow.js  toolswindow.jsx
src/components/graphs/: graph.jsx
src/components/hooks/: is-maximized.js  is-maximized.jsx  window-size.js
src/components/navigation/: chrome.js  chrome.jsx  navbar.js  toolbar.js  toolbar.jsx  vertical-split.jsx
src/components/navigation/tools/: terminal.jsx
src/components/windows/: horizontal-panels.jsx  vertical-panels.jsx  vertical-split.js
src/context/: mod.rs  settings.rs
src/core/: api.ts  context.ts  invocations.ts  result.ts
src/function/: builtin.rs  mod.rs
src/lib/: layout.svelte  main-window.svelte  tools-window.svelte  windows-manager.ts
src/lib/common/: icon.svelte
src/lib/nav/: chrome.svelte  navbar-item.svelte  navbar.svelte  rbar.svelte  toolbar.svelte
src/lib/navigation/: chrome.svelte  navbar-item.svelte  navbar.svelte  toolbar.svelte
src/lib/tools/: term-window.svelte  terminal.svelte
src/lib/tools/terminal/: io.ts  sender.svelte  term-window.svelte  terminal.svelte  terms-manager.svelte
src/routes/: Addons.jsx  App.js  App.jsx  Code.jsx  Document.js  ThreeDimensions.js  TwoDimensions.jsx  two-dimensions.svelte
src/styles/: split-themes.scss  term.scss
src/token/: tokentype.rs
src/typings/: index.d.ts
src/utils/: colors.ts  theme.ts
src/value/: display.rs  valuetype.rs
