[package]
name = "fm_mat"
version = "1.0.0"
description = "A math interpreter and evaluator"
keywords = ["math", "parser", "evaluator", "complex", "analysis"]
categories = ["mathematics", "parsing"]
edition = "2021"
repository = "https://github.com/BearToCode/Fermi.git"
homepage = "https://github.com/BearToCode/Fermi/tree/master/src-tauri/fm_mat"
documentation = "https://docs.rs/fm_mat"
readme = "README.md"
license = "MIT"
authors = ["BearToCode"]

[lib]
name = "fm_mat"
"path" = "src/lib.rs"

[features]
serde_support = ["serde"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
num = { version = "0.4.0", features = ["serde"] }
lazy_static = "1.4.0"
itertools = "0.10.3"
tuple-conv = "1.0.1"
rand = "0.8.5"