[package]
name = "numcore"
version = "0.1.0"
edition = "2021"
authors = ["BearToCode"]

[lib]
name = "numcore"
"path" = "src/lib.rs"

[features]
serde_support = ["serde"]

[dependencies]
num = { version = "0.4.0", features = ["serde"] }
lazy_static = "1.4.0"
itertools = "0.10.3"
serde = { version = "1.0", features = ["derive"], optional = true }