[package]
name = "numcore"
version = "0.1.0"
description = "A math interpreter and evaluator"
keywords = ["math", "parser", "evaluator", "complex", "analysis"]
edition = "2021"
repository = "https://github.com/BearToCode/Numerus.git"
homepage = "https://github.com/BearToCode/Numerus/tree/master/src-tauri/numcore"
documentation = "https://docs.rs/numcore"
readme = "README.md"
license = "MIT"
authors = ["BearToCode"]

[lib]
name = "numcore"
"path" = "src/lib.rs"

[features]
serde_support = ["serde"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
num = { version = "0.4.0", features = ["serde"] }
lazy_static = "1.4.0"
itertools = "0.10.3"
tuple-conv = "1.0.1"
rand = "0.8.5"